--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 spring:
   r2dbc:
-    url: r2dbc:postgresql://localhost:5432/test
+    url: r2dbc:postgresql://localhost:5432/postgres
     username: postgres
     password: Pass2020!
+  data:
+    r2dbc:
+      repositories:
+        enabled: true
 logging:
   level:
     org.springframework.data.r2dbc: Debug
